--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .calculator-container {
     display: grid;
     grid-template-columns: repeat(4, 6rem);
-    grid-template-rows: 3rem repeat(6, 5rem);
+    grid-template-rows: minmax(3rem, auto) repeat(6, 5rem);
     gap: 0.2rem;
     color: white;
 }
@@ -32,7 +32,8 @@ body {
     justify-content: flex-end;
     align-items: flex-end;
     padding: 1rem 0.8rem;
-
+    word-wrap:break-word;
+    word-break: break-all;
 }
 
 .previous {
@@ -44,10 +45,6 @@ body {
 .current {
     grid-column: 1 / 5;
     font-size: 2.2rem;
-}
-
-.result {
-    font-size: 2.2;
 }
 
 .span-2 {
